Intento de eliminar clientes (solo elimina los clientes que llegan a la derecha)

--- a/P2/index.html
+++ b/P2/index.html
@@ -12,6 +12,12 @@
 <body>
   <div id='container'>
     <canvas id='game' width='512' height='480'></canvas>
+    <canvas id="canvas1a"></canvas>
+    <!--<canvas id="canvas1b"></canvas>
+    <canvas id="canvas2a"></canvas>
+    <canvas id="canvas2b"></canvas>
+    <canvas id="canvas3a"></canvas>
+    <canvas id="canvas3b"></canvas>-->
   </div>
   <script src='src/engine.js'></script>
   <script src='src/game.js'></script>
